// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > SelectItem Matches snapshot when boolean prop "hasSelectedItems" is set to: "false" 1`] = `
<ForwardRef
  hovered={true}
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "onItemClick": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
            "title": "jest-auto-snapshots String Fixture",
          },
        ],
        Array [
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "onItemClick": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
            "title": "jest-auto-snapshots String Fixture",
          },
        ],
        Array [
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "onItemClick": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
            "title": "jest-auto-snapshots String Fixture",
          },
        ],
        Array [
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "onItemClick": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
            "title": "jest-auto-snapshots String Fixture",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
>
  <ForwardRef>
    <ForwardRef />
    <ForwardRef
      moveRight={false}
    />
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > SelectItem Matches snapshot when boolean prop "hovered" is set to: "false" 1`] = `
<ForwardRef
  hovered={false}
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "onItemClick": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
            "title": "jest-auto-snapshots String Fixture",
          },
        ],
        Array [
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "onItemClick": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
            "title": "jest-auto-snapshots String Fixture",
          },
        ],
        Array [
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "onItemClick": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
            "title": "jest-auto-snapshots String Fixture",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
>
  <ForwardRef>
    <ForwardRef />
    <ForwardRef
      moveRight={true}
    />
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > SelectItem Matches snapshot when passed all props 1`] = `
<ForwardRef
  hovered={true}
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "onItemClick": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
            "title": "jest-auto-snapshots String Fixture",
          },
        ],
        Array [
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "onItemClick": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
            "title": "jest-auto-snapshots String Fixture",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
>
  <ForwardRef>
    <ForwardRef />
    <ForwardRef
      moveRight={true}
    />
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > SelectItem Matches snapshot when passed only required props 1`] = `
<ForwardRef
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "onItemClick": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
            "title": "jest-auto-snapshots String Fixture",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
>
  <ForwardRef>
    <ForwardRef />
    <ForwardRef>
      jest-auto-snapshots String Fixture
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;
